--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "email": "cliff@may.be",
     "url": "http://may.be/"
   },
-  "license": "UNLICENSE",
+  "license": "Unlicense",
   "bugs": {
     "url": "https://github.com/CliffS/mustache-file/issues"
   },
@@ -35,6 +35,7 @@
   ],
   "dependencies": {
     "async": "^1.4.2",
-    "mustache": "^2.1.3"
+    "minimist": "^1.2.0",
+    "mustache": "^2.3.0"
   }
 }
