--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mustache-file",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "Read mustache files and partials from disk and pass them to mustache",
   "main": "lib/mustache.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run lint && coffee -c -o lib src/*.coffee",
-    "prepare": "npm run-script build",
+    "prepublishOnly": "npm run-script build",
     "watch": "coffee -w -o lib -c src &",
     "lint": "coffeelint src/*"
   },
